Keep track of dragged item index in ToolbarActionsBar

This is set up for animated action dragging. If an action is in the process
of being dragged from the main bar to the overflow or vice versa, it allows
the original bar to keep track of what's being dragged despite not having
an active drag session.

Bug: 826865
Change-Id: Id86dc6c2475ada376abe37fe7169b5f9d4d42e52
Reviewed-on: https://chromium-review.googlesource.com/1079287
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563019}
Former-commit-id: debc03f2d888caac5d5e23e411c57ec4adcef8df